// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form with one child 1`] = `
.c2 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label
    </label>
    <input
      className="c2"
      name="name"
      type="text"
    />
  </div>
</form>
`;

exports[`Form with one invalid child and a submit button 1`] = `
.c6 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  border-style: solid;
  border-width: 0.0625rem;
  background: #64518A;
  border-color: #64518A;
  color: #FFFFFF;
}

.c6:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c6[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c6[disabled]:hover,
.c6[disabled]:active,
.c6[disabled]:focus {
  background-color: #64518A;
  border-color: #C1C6CC;
}

.c6:hover,
.c6:focus,
.c6.hover {
  background: #473764;
  border-color: #473764;
}

.c6:active,
.c6.active {
  background: #2A1B60;
  border-color: #2A1B60;
}

.c2 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #CC1F36;
  background-color: #FFF2F4;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c4 {
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label1
    </label>
    <input
      className="c2"
      name="name1"
      type="text"
    />
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label2
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        e2
      </div>
      <input
        className="c5"
        name="name2"
        type="text"
      />
    </div>
  </div>
  <button
    className="c6"
  >
    Submit
  </button>
</form>
`;

exports[`Form with two invalid children 1`] = `
.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #CC1F36;
  background-color: #FFF2F4;
}

.c6 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #E8E5FF;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c3 {
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

.c5 {
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #473764;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label1
    </label>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        e1
      </div>
      <input
        className="c4"
        name="name1"
        type="text"
      />
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label2
    </label>
    <div
      className="c2"
    >
      <div
        className="c5"
      >
        e1
      </div>
      <input
        className="c6"
        name="name2"
        type="text"
      />
    </div>
  </div>
</form>
`;
